[project]
name = "cardano_account_pandas_dumper"
version = "2023.2.2"
description = "Create a spreadsheet with the owned amount of any Cardano asset at the end of a specific block, and a record of the transactions that affected it. Can also create a graphical representation of each asset's balance over time."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
    "asset",
    "balance",
    "Cardano",
    "graphic",
    "Pandas",
    "report",
    "transaction",
    "wallet",
    "graph",
]
dependencies = [
    "blockfrost-python",
    "jstyleson",
    "matplotlib",
    "openpyxl",
    "pandas",
    "types-openpyxl",
]

[project.scripts]
cardano_account_pandas_dumper = "cardano_account_pandas_dumper.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cardano_account_pandas_dumper = ["*.jsonc", "*.webp", "*.rc"]

[tool.mypy]
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "blockfrost.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jstyleson"
ignore_missing_imports = true
